# motlab

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  uv.toml
scripts/: bench.py  install.sh  play.py  train.py  view.py
test/: test_smoke.py
